fix:change some section to div

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <main class="content">
-            <section class="cv_profile">
-                <section class="cv_photo">
+            <div class="cv_profile">
+                <div class="cv_photo">
                     <img src="./images/pepe.png" alt="Photo">
-                </section>
-                <section class="cv_profile_info">
+                </div>
+                <div class="cv_profile_info">
                     <section class="cv_name">
                         <h2>Name</h2>
                         <p>Guretskiy Kazimir</p>
@@ -31,9 +31,9 @@
                             </li>
                         </ul>
                     </section>
-                </section>
+                </div>
                 
-            </section>
+            </div>
             
             <section class="cv_about">
                 <h2>About</h2>
