--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </section>
         </main>
         <footer class="cv_footer">
-            <section class="cv_footer_info">
+            <div class="cv_footer_info">
                 <div class="github_logo">
                     <img src="images/GitHub-Mark-64px.png" alt="Logo">
                     <a href="https://github.com/kazimirzet"></a>
@@ -82,7 +82,7 @@
                 </div>
             
                 <p>2021</p>
-            </section>
+            </div>
         </footer>
     </div>
 </body>
